[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/game/Game.gd" type="Script" id=1]
[ext_resource path="res://nodes/deck/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://nodes/path/Path.tscn" type="PackedScene" id=3]
[ext_resource path="res://nodes/lives_counter/LivesCounter.tscn" type="PackedScene" id=4]
[ext_resource path="res://nodes/turret/turrets/Fast.tscn" type="PackedScene" id=5]
[ext_resource path="res://nodes/spawner/Spawner.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/turret/turrets/Ranger.tscn" type="PackedScene" id=7]
[ext_resource path="res://nodes/wallet/Wallet.tscn" type="PackedScene" id=8]
[ext_resource path="res://nodes/camera/Camera.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=10]
[ext_resource path="res://nodes/sound/Sound.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/game/Sound.gd" type="Script" id=12]
[ext_resource path="res://scenes/game/Builder.gd" type="Script" id=13]
[ext_resource path="res://nodes/map/Map.tscn" type="PackedScene" id=14]
[ext_resource path="res://nodes/turret/turrets/Submachine.tscn" type="PackedScene" id=15]
[ext_resource path="res://nodes/turret/turrets/Regular.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/game/SkipShop.gd" type="Script" id=17]
[ext_resource path="res://nodes/turret/turrets/Heavy.tscn" type="PackedScene" id=18]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="Image" id=5]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 224, 224, 224, 0, 222, 222, 222, 0, 221, 221, 221, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 180, 222, 222, 222, 207, 221, 221, 221, 53, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 164, 224, 224, 224, 255, 222, 222, 222, 239, 221, 221, 221, 30, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 214, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 223, 223, 223, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 220, 220, 220, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 181, 222, 222, 222, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 180, 223, 223, 223, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 220, 220, 220, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 224, 224, 224, 255, 222, 222, 222, 214, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 223, 223, 223, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 224, 224, 224, 0, 224, 224, 224, 255, 224, 224, 224, 255, 223, 223, 223, 252, 222, 222, 222, 134, 218, 218, 218, 7, 219, 219, 219, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 210, 224, 224, 224, 255, 224, 224, 224, 255, 221, 221, 221, 60, 221, 221, 221, 0, 0, 0, 0, 0, 223, 223, 223, 0, 223, 223, 223, 152, 222, 222, 222, 191, 220, 220, 220, 52, 221, 221, 221, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 222, 222, 222, 181, 224, 224, 224, 255, 223, 223, 223, 249, 218, 218, 218, 35, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 223, 223, 223, 0, 222, 222, 222, 0, 220, 220, 220, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 222, 222, 222, 0, 224, 224, 224, 0, 223, 223, 223, 0, 218, 218, 218, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 0
flags = 0
image = SubResource( 5 )
size = Vector2( 16, 16 )

[sub_resource type="Environment" id=1]
background_mode = 4
glow_bloom = 0.23
glow_blend_mode = 0

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Sound" type="Node" parent="."]
script = ExtResource( 12 )

[node name="SFX" parent="Sound" instance=ExtResource( 11 )]
folder = "res://assets/sfx/"
sound_names = [ "click.wav", "explosion.wav", "place.wav", "hit.wav" ]

[node name="Music" parent="Sound" instance=ExtResource( 11 )]
autoplay = true
folder = "res://assets/songs/"
sound_names = [ "AnotherBrickInTheWall_Game.ogg", "InterstellarOverdrive_Game.ogg", "JuliaDream_Game.ogg", "LetThereBeMoreLight_Game.ogg", "LuciferSam_Game.ogg" ]
single_random = true

[node name="Shop" parent="Sound" instance=ExtResource( 11 )]
volume_db = -80.0
autoplay = true
folder = "res://assets/songs/"
sound_names = [ "Money_Shop.ogg" ]

[node name="Builder" type="Node" parent="."]
script = ExtResource( 13 )
map_path = NodePath("../World/Map")
wallet_path = NodePath("../UI/Wallet")
deck_path = NodePath("../UI/Deck")
sfx_path = NodePath("../Sound/SFX")

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 15
size_flags_vertical = 15
theme = ExtResource( 10 )

[node name="Deck" parent="UI" instance=ExtResource( 2 )]
turrets = [ ExtResource( 16 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 18 ), ExtResource( 15 ) ]
wallet_path = NodePath("../Wallet")

[node name="Wallet" parent="UI" instance=ExtResource( 8 )]
margin_top = 12.0
margin_right = -12.0

[node name="Lives" parent="UI" instance=ExtResource( 4 )]
margin_left = 12.0
margin_top = 12.0

[node name="SkipShop" type="Button" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_right = 8.0
margin_bottom = 41.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/disabled = SubResource( 4 )
icon = SubResource( 3 )
flat = true
script = ExtResource( 17 )
spawner_path = NodePath("../../World/Spawner")

[node name="World" type="Node2D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="World"]
environment = SubResource( 1 )

[node name="Spawner" parent="World" instance=ExtResource( 6 )]
start_delay = 1
path_node = NodePath("../Path")
sequence = [ {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
}, {
"type": "shop"
} ]

[node name="Map" parent="World" instance=ExtResource( 14 )]

[node name="Path" parent="World" instance=ExtResource( 3 )]
map_path = NodePath("../Map")

[node name="Camera" parent="." instance=ExtResource( 9 )]
anchor_mode = 0
current = true

[connection signal="game_over" from="UI/Lives" to="." method="_on_Lives_game_over"]
[connection signal="pressed" from="UI/SkipShop" to="UI/SkipShop" method="_on_SkipShop_pressed"]
[connection signal="enemy_died" from="World/Spawner" to="." method="_on_Spawner_enemy_died"]
[connection signal="enemy_died" from="World/Spawner" to="Sound" method="_on_Spawner_enemy_died"]
[connection signal="enemy_died" from="World/Spawner" to="UI/Wallet" method="_on_Spawner_enemy_died"]
[connection signal="enemy_died" from="World/Spawner" to="Camera" method="_on_Spawner_enemy_died"]
[connection signal="enemy_hit" from="World/Spawner" to="Sound" method="_on_Spawner_enemy_hit"]
[connection signal="sequence_ended" from="World/Spawner" to="." method="_on_Spawner_sequence_ended"]
[connection signal="shop_ended" from="World/Spawner" to="Sound" method="_on_Spawner_shop_ended"]
[connection signal="shop_ended" from="World/Spawner" to="UI/SkipShop" method="_on_Spawner_shop_ended"]
[connection signal="shop_started" from="World/Spawner" to="Sound" method="_on_Spawner_shop_started"]
[connection signal="shop_started" from="World/Spawner" to="UI/SkipShop" method="_on_Spawner_shop_started"]
[connection signal="enemy_reached" from="World/Path" to="UI/Lives" method="_on_Path_enemy_reached"]
